Fixed jumping behavior with Gravatar avatars

--- a/src/components/chat/message-bubble/message-bubble.scss
+++ b/src/components/chat/message-bubble/message-bubble.scss
@@ -1,5 +1,7 @@
 .MessageBubble {
-	img {
+	img.Avatar {
+		width: 32px;
+		height: 32px;
 		border-radius: 100%;
 	}
 
